syntax = "proto3";

package zitadel.resources.action.v3alpha;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "zitadel/protoc_gen_zitadel/v2/options.proto";
import "google/protobuf/timestamp.proto";

import "zitadel/resources/object/v3alpha/object.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/resources/action/v3alpha;action";

message Target {
  string name = 1 [
    (validate.rules).string = {min_len: 1, max_len: 1000},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"ip_allow_list\"";
      min_length: 1
      max_length: 1000
    }
  ];
  // Defines the target type and how the response of the target is treated.
  oneof target_type {
    option (validate.required) = true;
    SetRESTWebhook rest_webhook = 2;
    SetRESTCall rest_call = 3;
    SetRESTAsync rest_async = 4;
  }
  // Timeout defines the duration until ZITADEL cancels the execution.
  google.protobuf.Duration timeout = 5 [
    (validate.rules).duration = {gte: {}, lte: {seconds: 270}},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "if the target doesn't respond before this timeout expires, the the connection is closed and the action fails";
      example: "\"10s\"";
    }
  ];
  string endpoint = 6 [
    (validate.rules).string = {min_len: 1, max_len: 1000},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://example.com/hooks/ip_check\""
      min_length: 1
      max_length: 1000
    }
  ];
}

message GetTarget {
  zitadel.resources.object.v3alpha.Details details = 1;
  Target config = 2;
  string signing_key = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"98KmsU67\""
    }
  ];
}

message PatchTarget {
  optional string name = 1 [
    (validate.rules).string = {min_len: 1, max_len: 1000},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"ip_allow_list\""
      min_length: 1
      max_length: 1000
    }
  ];
  // Defines the target type and how the response of the target is treated.
  oneof target_type {
    SetRESTWebhook rest_webhook = 2;
    SetRESTCall rest_call = 3;
    SetRESTAsync rest_async = 4;
  }
  // Timeout defines the duration until ZITADEL cancels the execution.
  optional google.protobuf.Duration timeout = 5 [
    (validate.rules).duration = {gte: {}, lte: {seconds: 270}},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "if the target doesn't respond before this timeout expires, the the connection is closed and the action fails";
      example: "\"10s\"";
    }
  ];
  optional string endpoint = 6 [
    (validate.rules).string = {min_len: 1, max_len: 1000},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://example.com/hooks/ip_check\""
      min_length: 1
      max_length: 1000
    }
  ];
  // Regenerate the key used for signing and checking the payload sent to the target.
  // Set the graceful period for the existing key. During that time, the previous
  // signing key and the new one will be used to sign the request to allow you a smooth
  // transition onf your API.
  //
  // Note that we currently only allow an immediate rotation ("0s") and will support
  // longer expirations in the future.
  optional google.protobuf.Duration expiration_signing_key = 7 [
    (validate.rules).duration = {const: {seconds: 0, nanos: 0}},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"0s\""
      minimum: 0
      maximum: 0
    }
  ];
}


// Wait for response but response body is ignored, status is checked, call is sent as post.
message SetRESTWebhook {
  // Define if any error stops the whole execution. By default the process continues as normal.
  bool interrupt_on_error = 1;
}

// Wait for response and response body is used, status is checked, call is sent as post.
message SetRESTCall {
  // Define if any error stops the whole execution. By default the process continues as normal.
  bool interrupt_on_error = 1;
}

// Call is executed in parallel to others, ZITADEL does not wait until the call is finished. The state is ignored, call is sent as post.
message SetRESTAsync {}
